--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "eslint-config-mlorencs-react",
-  "version": "0.1.0",
-  "description": "Provides my own eslint rules for React as an extensible shared config.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mlorencs/eslint-config-mlorencs-react.git"
-  },
-  "keywords": [
-    "eslint",
-    "eslintconfig",
-    "config",
-    "javascript",
-    "react",
-    "es2015"
-  ],
-  "author": "Maris Lorencs",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mlorencs/eslint-config-mlorencs-react/issues"
-  },
-  "homepage": "https://github.com/mlorencs/eslint-config-mlorencs-react#readme",
-  "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2"
-  }
+    "name": "@mlorencs/eslint-config-react",
+    "version": "0.1.0",
+    "description": "Provides my own eslint rules for React as an extensible shared config.",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mlorencs/eslint-config-mlorencs-react.git"
+    },
+    "keywords": [
+        "eslint",
+        "eslintconfig",
+        "config",
+        "javascript",
+        "react",
+        "es2015"
+    ],
+    "author": "Maris Lorencs",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mlorencs/eslint-config-mlorencs-react/issues"
+    },
+    "homepage": "https://github.com/mlorencs/eslint-config-mlorencs-react#readme",
+    "devDependencies": {
+        "eslint": "^8.57.1",
+        "eslint-plugin-jsx-a11y": "^6.10.0",
+        "eslint-plugin-react": "^7.36.1",
+        "eslint-plugin-react-hooks": "^4.6.2"
+    }
 }
